# SessionAlignment

./: .gitignore  README.md  requirements.txt  setup.cfg
featureMatching/: best_result.py  main.ipynb  main.py
jellepose/: estimation.py  geometrymatch.py  geometrytransform.py  imagematch.py  imagetransform.py  params.py  positioning2d.py  positioning3d.py  session.py  utils.py
positioning/: 3dtest.py  compareImage.py  examples.ipynb  main.ipynb  main.py  matrix.py  positioning2D.py  positioning3D.py  session.py  tests.py  transform.py
roomMatching/: bestResult.py  cameraMatrixCalculator.py  compareImage.py  compareImageSession.py  compareImages.py  findBestSessions.py  getGlobalPositionOffset.py  imageTransform.py  main.py  transform.py
src/: CaseStudies.ipynb
src/positioning/: CaseStudies.ipynb  RenderOption_2021-12-22-16-23-36.json  ScreenCamera_2021-12-22-16-23-36.json  cameracalibration.ipynb  compareImage.py  estimation.py  examples.ipynb  geometrymatch.py  geometrytransform.py  imagematch.py  imagetransform.py  match.py  params.py  positioning2D.py  positioning3D.py  rdfobject.py  rdfpointcloud.py  session.py  transform.py  utils.py
tests/: CaseStudies.ipynb  context.py  examples.ipynb
