[metadata]
name = jellekul-pose
version = 0.0.1
author = Jelle Vermandere
author_email = jelle.vermandere@kuleuven.be
description = Aligning devices using 2D and 3D reference data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JelleKUL/PythonDataAlignment
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src